#439 Revert to JDK 14 Stream API
Some of the code used Stream#toList(). To maintain compatibility with
JDK 14, change these calls to Stream#collect(Collectors.toList()